pvsz-web/src/components/About.css
.about {
    background: url("../assets/images/leaves_yellow.png"), #E2ECC6;
    background-position: 0% 0%;
    background-repeat: no-repeat;
    overflow-y: scroll;
    margin: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    z-index: 0;
}

.title {
    font-size: 3vh;
}

.navbar_style {
    margin-left: 5%;
    margin-top: 5%;
}

main h1 {
    font-family: "BM Hanna 11yrs Old";
    font-size: 3.5em;
    color: #FFFFFF;
    margin-top: 5%; 
    margin-left: 5%;
    margin-bottom: 0%;
    text-shadow: 3px 3px #44533B;
    display: inline-block;
}

main h3 {
    font-family: Tamil MN;
    font-size: 1.5em;
    color: #555b6e;
    margin-top: 5%;
    margin-left: 2%;
}

main p {
    font-family: Tamil MN;
    color: #555b6e;
    font-size: 1.5em;
    margin-left: 2%;
}

#last_line {
    font-family: Tamil MN;
    color: #555b6e;
    margin-left: 2%;
}

.rectangle {
    border-radius: 25px;
    z-index: 1;
    background-color: #BACB94;
    height: 35rem;
    width: auto;
    margin:1.5rem ;
    top: 0; left: 0; bottom: 0; right: 0;
    
}

/* .rectangleContent {
    border-radius: 25px;
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 3%;
    padding-left: 3%;
    padding-right: 3%;
    padding-bottom: 37vh; 
    background-color: #BACB94;
    word-wrap: break-word;
} */

/* .contentBox {
    position: absolute;
    z-index: 100;
    height: 100%;
    width: 100%;
    top: 0;
    overflow: hidden;

} */
.content {
    z-index: 100;
    height: 100%;
    width: 100%;
    top: 0;
    overflow: hidden;
    z-index: 3;
    font-size: 2vh;
}

.img {
    width: fit-content;
    height: fit-content;
    overflow: auto;
    margin: auto;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 0;
    opacity: 0.5;
    text-align: center;
}

.zombieImg {
    width: 100%;
}

.titleImg {
    width: 20%;
    height: auto;
}

